--- a/getfedora.org/data/content/workstation/prerelease/index.html
+++ b/getfedora.org/data/content/workstation/prerelease/index.html
@@ -15,7 +15,25 @@
       <div class="row">
         <div class="col-md-7 col-md-offset-5 text-left">
           <h2>${Markup(_('Download Fedora %(rel)s %(state)s Workstation')) % {'rel':global_variables.release['next_id'], 'state':global_variables.release['curr_state']}}</h2>
-            <p><a class="btn btn-success" href="#fmw" role="button">${_('Download')}</a></p>
+            <div class="fmw-macos hidden">
+              <p><a class="btn btn-success" href="https://ausil.fedorapeople.org/mediawriter.dmg" role="button">${_('Download')}</a></p>
+              <p>${Markup(_('%s MB Fedora Media Writer for &lt;strong&gt;Mac OS X&lt;/strong&gt;')) % global_variables.iso_size['macosx']}</p>
+            </div>
+            <div class="fmw-linux hidden">
+              <p><a class="btn btn-success" href="https://download.fedoraproject.org/pub/fedora/linux/releases/test/25_Alpha/Workstation/x86_64/iso/Fedora-Workstation-Live-x86_64-25_Alpha-2.iso" role="button">${_('Download')}</a></p>
+              <p>${Markup(_('64-bit 1.3 GB ISO for &lt;strong&gt;Linux&lt;/strong&gt;'))}</p>
+              <p>${Markup(_('Already on Fedora? Learn how to &lt;a href="#dnf"&gt;install via DNF&lt;/a&gt;.'))}</p>
+            </div>
+            <div class="fmw-windows hidden">
+              <p><a class="btn btn-success" href="https://ausil.fedorapeople.org/FMW-setup.exe" role="button">${_('Download')}</a></p>
+              <p>${Markup(_('%s MB Fedora Media Writer for &lt;strong&gt;Windows&lt;/strong&gt;')) % global_variables.iso_size['windows']}</p>
+            </div>
+            <p class="fmw-generic hidden">Download Fedora Media Writer for your operating system.</p>
+            <p class="fmw-all hidden"><a href="#fmw">Need a different version?</a></p>
+            <!-- Having the <noscript> one be separate from generic means we can unhide one of the
+                 above without worrying about jumping/changing text after the DOM finishes loading.
+                 Otherwise we load a default then change it which looks tacky. -->
+            <noscript><p>Download Fedora Media Writer for your operating system.</p></noscript>
         </div>
       </div>
     </div>
