shorten the download header for Linux users

--- a/getfedora.org/data/content/workstation/prerelease/index.html
+++ b/getfedora.org/data/content/workstation/prerelease/index.html
@@ -21,8 +21,8 @@
             </div>
             <div class="fmw-linux hidden">
               <p><a class="btn btn-success" href="https://download.fedoraproject.org/pub/fedora/linux/releases/test/25_Alpha/Workstation/x86_64/iso/Fedora-Workstation-Live-x86_64-25_Alpha-2.iso" role="button">${_('Download')}</a></p>
-              <p>${Markup(_('64-bit 1.3 GB ISO for &lt;strong&gt;Linux&lt;/strong&gt;'))}</p>
-              <p>${Markup(_('Already on Fedora? Learn how to &lt;a href="#dnf"&gt;install via DNF&lt;/a&gt;.'))}</p>
+              <p>${Markup(_('64-bit %s GB ISO for &lt;strong&gt;Linux&lt;/strong&gt;.')) % global_variables.iso_size['pre_x86_64_workstation']}
+              ${Markup(_('&lt;a href="%s"&gt;Install via DNF&lt;/a&gt; if you are already on Fedora.') % ('#dnf'))}</p>
             </div>
             <div class="fmw-windows hidden">
               <p><a class="btn btn-success" href="https://github.com/MartinBriza/MediaWriter/releases/download/3.96.0/FedoraMediaWriter-win-3.96.0.exe" role="button">${_('Download')}</a></p>
@@ -128,7 +128,7 @@
                       <a href="#" role="button">(${_('More details')})</a></p>
                 </div>
                 <div class="jumbotron linux">
-                      <p>${Markup(_('64-bit 1.3 GB ISO for &lt;strong&gt;Linux&lt;/strong&gt;'))}<br />
+                      <p>${Markup(_('64-bit %s GB ISO for &lt;strong&gt;Linux&lt;/strong&gt;.')) % global_variables.iso_size['pre_x86_64_workstation']}<br />
                       <a href="#">(${_('How to use this ISO?')})</a></p>
                       <a class="btn btn-success" href="${global_variables.path['download']}/test/${global_variables.release['next_id']}_${global_variables.release['curr_state']}/Workstation/x86_64/iso/Fedora-Workstation-Live-x86_64-${global_variables.release['next_id']}_${global_variables.release['curr_state']}-${global_variables.release['RC_pre_build']}.iso" role="button">${_('Download')}</a>
                       <p><a href="${path}/static/checksums/Fedora-Workstation-${global_variables.release['next_id']}-${global_variables.release['curr_state']}-${global_variables.release['RC_pre_gold']}-x86_64-CHECKSUM">(${_('Verify this image')})</a></p>
