getfedora: Point people to instructions as well as OS choices

--- a/getfedora.org/data/content/workstation/prerelease/index.html
+++ b/getfedora.org/data/content/workstation/prerelease/index.html
@@ -29,7 +29,7 @@
               <p>${Markup(_('%s MB Fedora Media Writer for &lt;strong&gt;Windows&lt;/strong&gt;')) % global_variables.iso_size['windows']}</p>
             </div>
             <p class="fmw-generic hidden">${_('Download Fedora Media Writer for your operating system.')}</p>
-            <p class="fmw-all hidden"><a href="#fmw">${_('Need a different version?')}</a></p>
+            <p class="fmw-all hidden"><a href="#fmw">${_('Need instructions? Or a different version?')}</a></p>
             <!-- Having the <noscript> one be separate from generic means we can unhide one of the
                  above without worrying about jumping/changing text after the DOM finishes loading.
                  Otherwise we load a default then change it which looks tacky. -->
