--- a/getfedora.org/data/content/workstation/prerelease/index.html
+++ b/getfedora.org/data/content/workstation/prerelease/index.html
@@ -165,7 +165,7 @@
           <div class="top-space bottom-margin"><h4>${_('Resources')}</h4></div>
           <p><i class="fa fa-fw fa-sm header-icon fa-globe"></i>${Markup(_('&lt;a href="%(commonbugs_url)s"&gt;&lt;strong&gt;Common Bugs&lt;/strong&gt;&lt;/a&gt;') % {'commonbugs_url': 'https://fedoraproject.org/wiki/Common_F%s_bugs' % (global_variables.release['next_id'])})}</p>
           <div class="pull-right bottom-step"><p>${_('An excellent resource to consult in case you run into any issues installing or running Fedora.')}</p></div>
-          <p><i class="fa fa-fw fa-sm header-icon fa-book"></i>${Markup(_('&lt;a href="#"&gt;&lt;strong&gt;How to test pre-releases&lt;/strong&gt;&lt;/a&gt;'))}</p>
+          <p><i class="fa fa-fw fa-sm header-icon fa-book"></i>${Markup(_('&lt;a href="https://fedoraproject.org/wiki/QA/Join#release-validation"&gt;&lt;strong&gt;How to test pre-releases&lt;/strong&gt;&lt;/a&gt;'))}</p>
           <div class="pull-right bottom-space"><p>${_('Fedora wiki guide on how to help test pre-release versions of Fedora.')}</p></div>
 
           <div class="bottom-margin"><h4>${_('What does "Live" mean?')}</h4></div>
