drop Games spin for F25 Beta

--- a/labs.fedoraproject.org/data/content/prerelease.html
+++ b/labs.fedoraproject.org/data/content/prerelease.html
@@ -78,8 +78,7 @@
   	  	  </div>
        </div>
 
-       <div class="high">
-    	  <div class="row top-margin">
+<!--    	  <div class="row top-margin">
     	   <div class="col-xs-12 pre-box">
     	  	<div class="col-xs-12 col-sm-4 text-center no-leftpadding">
     	  	  <img class="screenshot image-responsive" src="${path}/static/images/screenshots/screenshot-games.jpg" alt="Games Screenshot" />
@@ -99,7 +98,7 @@
   	  	   </div>
   	  	  </div>
        </div>
-
+-->
        <div class="high">
     	  <div class="row top-margin">
     	   <div class="col-xs-12 pre-box">
